<resources>
    <string name="app_name">Some app</string>
    <string name="sales_icon">salesIcon</string>
    <string name="contacts_text">Контакты</string>
    <string name="about_us_text">О нас</string>
    <string name="main_text">Главная</string>
    <string name="courses_text">Courses</string>
    <string name="App_text">App</string>
    <string name="menu_icon">menuIcon</string>
    <string name="course_start_date">Старт обучения</string>
    <string name="course_level">Уровень</string>
    <string name="course_page_desc">За программу вы изучите построение графических приложений под ПК,
        разработку веб сайтов на основе JAVA, SpringBoot, изучите построение Андроид приложений и отлично
    изучите сам синтаксис Джава</string>



</resources>